--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <!-- Start header -->
-    <div class="container d-flex justify-content-between mt-5 mb-4">
+    <div class="container header d-flex justify-content-between mt-5 mb-4">
       <div class="logo">
         <img src="assets/images/output-onlinepngtools.png" height="100px" />
       </div>
