--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
               required
             />
           </div>
+        
         </div>
 
         <div class="form-group row border-line">
           <div class="row col-sm-6">
             <label for="startDate" class="col-sm-7 col-form-label"
-              >ﺗﺎريﺦ ﺇﺻﺪﺍﺭ ﺍﻟﺴﺠﻞ/Commercial Reg. Issuance Date:</label
+              >ﺗﺎريخ ﺇﺻﺪﺍﺭ ﺍﻟﺴﺠﻞ/Commercial Reg. Issuance Date:</label
             >
             <div class="col-sm-5">
               <input
@@ -149,7 +150,7 @@
           <div class="row end-date col-sm-6">
             <div class="form-group row">
               <label for="endDate" class="col-sm-8 col-form-label"
-                >ﺗﺎريﺦ ﺇنﺘﻬﺎﺀ ﺍﻟﺴﺠﻞ/Commercial Reg. Expiration Date:</label
+                >تاريخﺇنتهاءﺍﻟﺴﺠﻞ/Commercial Reg. Expiration Date:</label
               >
               <div class="col-sm-4">
                 <input
@@ -166,7 +167,7 @@
 
         <div class="form-group row border-line">
           <label for="postBox" class="col-sm-3 col-form-label"
-            >ﺻﻨﺪﻭﻕ ﺍﻟﺒريﺪ /P.O. Box:</label
+            >ﺻﻨﺪﻭﻕ البريد/P.O. Box:</label
           >
           <div class="col-sm-9">
             <input
@@ -181,7 +182,7 @@
 
         <div class="form-group row border-line">
           <label for="inputemail" class="col-sm-3 col-form-label"
-            >ﺍﻟﺒريﺪ ﺍﻹﻟﻜﺘرﻭﻧﻲ/Email:</label
+            >ﺍﻟﺒريد ﺍﻹﻟﻜﺘرﻭﻧﻲ/Email:</label
           >
           <div class="col-sm-9">
             <input
@@ -200,7 +201,7 @@
         <div class="establish row border-line">
           <div class="col-sm-4 form-group row">
             <label for="establishHomeSteet" class="col-sm-6 col-form-label"
-              >ﺍﺳﻢ ﺍﻟﺸﺎرﻉ/Street Nam:</label
+              >ﺍﺳﻢ ﺍﻟﺸﺎرﻉ/Street Name:</label
             >
             <div class="col-sm-6">
               <input
@@ -267,7 +268,7 @@
           <div class="row end-date col-sm-6">
             <div class="form-group row">
               <label for="inputTel" class="col-sm-4 col-form-label"
-                >ﺍﻟﻬﺎتﻒ/Telephone</label
+                >ﺍﻟﻬﺎتف/Telephone</label
               >
               <div class="col-sm-8">
                 <input
@@ -285,7 +286,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="establishManger" class="col-sm-5 col-form-label"
-              >ﺍﻟﻤﺪيﺮ ﺍﻟﺘﻨﻔﻴﺬﻱ ﻟﻠﻤﻨﺸﺄﺓ/Executive Director:</label
+              >المديرﺍﻟﺘﻨﻔﻴﺬﻱ ﻟﻠﻤﻨﺸﺄﺓ/Executive Director:</label
             >
             <div class="col-sm-6">
               <input
@@ -301,7 +302,7 @@
           <div class="row end-date col-sm-6">
             <div class="form-group row">
               <label for="managerTel" class="col-sm-4 col-form-label"
-                >ﺍﻟﻬﺎتﻒ/Telephone</label
+                >ﺍﻟﻬﺎتف/Telephone</label
               >
               <div class="col-sm-8">
                 <input
@@ -335,7 +336,7 @@
           <div class="row end-date col-sm-6">
             <div class="form-group row">
               <label for="represenTel" class="col-sm-4 col-form-label"
-                >ﺍﻟﻬﺎتﻒ/Telephone</label
+                >ﺍﻟﻬﺎتف/Telephone</label
               >
               <div class="col-sm-8">
                 <input
@@ -350,7 +351,7 @@
           </div>
         </div>
         <p class="border-line">
-          ﺗﻮﻗﻴﻊ ﺍﻟﻤﺪيﺮ ﺃﻭ ﻣﻦ ﻳﻨﻮﺏ ﻋﻨﻪ/ General Mgr.Designee Signature:
+          ﺗﻮﻗﻴﻊ ﺍﻟﻤﺪير ﺃﻭ ﻣﻦ ﻳﻨﻮﺏ ﻋﻨﻪ/ General Mgr.Designee Signature:
         </p>
 
         <h6 class="font-weight-bold">
@@ -360,7 +361,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="observerName" class="col-sm-5 col-form-label"
-              >ﺍﺳﻢﺍﻟﻤﻌﺎيﻦ/Name:</label
+              >ﺍﺳﻢﺍﻟﻤﻌﺎين/Name:</label
             >
             <div class="col-sm-7">
               <input
@@ -394,7 +395,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="observeDate" class="col-sm-5 col-form-label"
-              >ﺗﺎريﺦ ﺍﻟﻤﻌﺎﻳﻨﺔ /Inspection Date:</label
+              >ﺗﺎريخ ﺍﻟﻤﻌﺎﻳﻨﺔ /Inspection Date:</label
             >
             <div class="col-sm-7">
               <input
@@ -485,7 +486,7 @@
 
         <div class="form-group row border-line">
           <label for="inputtext" class="col-sm-5 col-form-label"
-            >ﻳﻌﺘﻤﺪ ﻣﺪيﺮ ﺇﺩﺍﺭﺓ ﺗرﺍﺧﻴﺺ ﺍﻟﻨﻘﻞ ﺍﻟﺒﺮﻱ ﺑﺎﻹﻧﺎﺑﺔ/Approval of Land
+            >ﻳﻌﺘﻤﺪ ﻣﺪير ﺇﺩﺍﺭﺓ ﺗرﺍﺧﻴﺺ ﺍﻟﻨﻘﻞ ﺍﻟﺒﺮﻱ ﺑﺎﻹﻧﺎﺑﺔ/Approval of Land
             Transport Licensing Director :</label
           >
           <div class="col-sm-7">
