--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             ﺃﻧشطة تأجير السيارات بدون سائق/Car Rental without Driver
           </label>
         </div>
-        <h6 class="font-weight-bold">
+        <h6 class="font-weight-bold establish-data">
           بيانات المنشأة/Establishment Information:
         </h6>
         <div class="form-group row border-line">
@@ -117,7 +117,7 @@
 
         <div class="form-group row border-line">
           <label for="establishType" class="col-sm-3 col-form-label"
-            >ﻧﻮﻉ ﺍﻟﻤﻨﺸﺄﺓ/Establishment Type:</label
+            >ﻧﻮﻉ المنشأة/Establishment Type:</label
           >
           <div class="col-sm-9">
             <input
@@ -195,9 +195,9 @@
           </div>
         </div>
 
-        <h6 class="font-weight-bold">ﻣﻮﻗﻊ ﺍﻟﻤﻨﺸﺄﺓ/Establishment Location:</h6>
+        <h6 class="font-weight-bold">ﻣﻮﻗﻊ المنشأة/Establishment Location:</h6>
 
-        <p class="border-line">ﻣﻘﺮ ﺍﻟﻤﻨﺸﺄﺓ ﺍﻟﺮﺋﻴﺴﻲ/:Establishment HQ</p>
+        <p class="border-line">ﻣﻘﺮ المنشأة ﺍﻟﺮﺋﻴﺴﻲ/:Establishment HQ</p>
         <div class="establish row border-line">
           <div class="col-sm-4 form-group row">
             <label for="establishHomeSteet" class="col-sm-6 col-form-label"
@@ -252,7 +252,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="establishOwner" class="col-sm-4 col-form-label"
-              >ﻣﺎﻟﻚ ﺍﻟﻤﻨﺸﺄﺓ/Owner</label
+              >ﻣﺎﻟﻚ المنشأة/Owner</label
             >
             <div class="col-sm-8">
               <input
@@ -286,7 +286,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="establishManger" class="col-sm-5 col-form-label"
-              >المديرﺍﻟﺘﻨﻔﻴﺬﻱ ﻟﻠﻤﻨﺸﺄﺓ/Executive Director:</label
+              >المديرﺍﻟﺘﻨﻔﻴﺬﻱ للمنشأة/Executive Director:</label
             >
             <div class="col-sm-6">
               <input
@@ -320,7 +320,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="establishRresent" class="col-sm-5 col-form-label"
-              >ﻣﻨﺪﻭﺏ ﺍﻟﻤﻨﺸﺄﺓ /Representative:</label
+              >مندوب المنشأة /Representative:</label
             >
             <div class="col-sm-7">
               <input
@@ -486,7 +486,7 @@
 
         <div class="form-group row border-line">
           <label for="inputtext" class="col-sm-5 col-form-label"
-            >ﻳﻌﺘﻤﺪ ﻣﺪير ﺇﺩﺍﺭﺓ ﺗرﺍﺧﻴﺺ ﺍﻟﻨﻘﻞ ﺍﻟﺒﺮﻱ ﺑﺎﻹﻧﺎﺑﺔ/Approval of Land
+            >ﻳﻌﺘﻤﺪ ﻣﺪيرإدارة ﺗرﺍﺧﻴﺺ ﺍﻟﻨﻘﻞ ﺍﻟﺒﺮﻱ ﺑﺎﻹﻧﺎﺑﺔ/Approval of Land
             Transport Licensing Director :</label
           >
           <div class="col-sm-7">
