--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="form-group row border-line">
           <div class="row start-date col-sm-6">
             <label for="establishManger" class="col-sm-5 col-form-label"
-              >المديرﺍﻟﺘﻨﻔﻴﺬﻱ للمنشأة/Executive Director:</label
+              >المدير ﺍﻟﺘﻨﻔﻴﺬﻱ للمنشأة/Executive Director:</label
             >
             <div class="col-sm-6">
               <input
@@ -351,7 +351,7 @@
           </div>
         </div>
         <p class="border-line">
-          ﺗﻮﻗﻴﻊ ﺍﻟﻤﺪير ﺃﻭ ﻣﻦ ﻳﻨﻮﺏ ﻋﻨﻪ/ General Mgr.Designee Signature:
+          ﺗﻮﻗﻴﻊ ﺍﻟﻤﺪيرأو ﻣﻦ ﻳﻨﻮﺏ ﻋﻨﻪ/ General Mgr.Designee Signature:
         </p>
 
         <h6 class="font-weight-bold">
